# src/routes/employeeRoutes.ts
@@ -5,6 +5,6 @@ export const employeeRoutes = express.Router()
 
 employeeRoutes.get('/', employeeController.list_all_employees);
 employeeRoutes.post('/', employeeController.create_employee);
-employeeRoutes.get('/:id', employeeController.search_employee)
+employeeRoutes.get('/search/:id', employeeController.search_employee)
 employeeRoutes.delete('/', employeeController.delete_employee)
 employeeRoutes.put('/', employeeController.update_employee)
